ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BlCode__c/Beneficiary_BlCode__c.object-meta.xml
<CustomObject>
    <label>Beneficiary BlCode</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiary BlCodes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>