ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BlCode__c/fields/Ben_code__c.field-meta.xml
<CustomField>
    <fullName>Ben_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ben_code</label>
    <referenceTo>Benefi__c</referenceTo>
    <relationshipName>Beneficiary_BlCodes</relationshipName>
    <type>Lookup</type>
</CustomField>