ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BlCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ben_code__c</columns>
    <columns>Bl_Code_Details__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Unique_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bl_Code_Details__c</field>
        <operation>equals</operation>
        <value>MWT</value>
    </filters>
    <label>All</label>
</ListView>