ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BlCode__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Bl_Code_Details__c</columns>
    <columns>Ben_code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ben_code__c</field>
        <operation>equals</operation>
        <value>BEN 320454</value>
    </filters>
    <label>All</label>
</ListView>